--- a/src/main/resources/javafx/menu.fxml
+++ b/src/main/resources/javafx/menu.fxml
@@ -39,7 +39,7 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox prefHeight="201.0" prefWidth="560.0">
+                  <HBox prefHeight="165.0" prefWidth="560.0">
                      <children>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="280.0">
                            <children>
@@ -50,19 +50,19 @@
                                  </VBox.margin></Label>
                            </children>
                            <HBox.margin>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </VBox>
                         <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="280.0">
                            <children>
                               <Label text="Map :" />
-                              <Label fx:id="lbl_info_map" alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="51.0" prefWidth="90.0" text="lbl_info_map">
+                              <Label fx:id="lbl_info_map" alignment="TOP_LEFT" contentDisplay="TOP" prefHeight="53.0" prefWidth="90.0" text="lbl_info_map">
                                  <VBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                    <Insets left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin></Label>
                            </children>
                            <HBox.margin>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                              <Insets left="10.0" right="10.0" top="10.0" />
                            </HBox.margin>
                         </VBox>
                      </children></HBox>
