--- a/src/main/resources/javafx/simulation.fxml
+++ b/src/main/resources/javafx/simulation.fxml
@@ -13,6 +13,24 @@
               <children>
                <VBox prefHeight="650.0">
                   <children>
+                     <VBox alignment="CENTER" layoutX="10.0" layoutY="297.0" prefHeight="101.0" prefWidth="250.0">
+                        <children>
+                           <Label fx:id="lbl_generation1" contentDisplay="CENTER" text="Simulation :">
+                              <font>
+                                 <Font size="30.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
+                     <VBox alignment="CENTER" prefHeight="101.0" prefWidth="250.0">
+                        <children>
+                           <Label fx:id="lbl_generation" contentDisplay="CENTER" text="Generation : 0">
+                              <font>
+                                 <Font size="20.0" />
+                              </font>
+                           </Label>
+                        </children>
+                     </VBox>
                      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="273.0">
                         <children>
                                 <Button fx:id="btn_play" mnemonicParsing="false" text="PLAY" />
@@ -40,21 +58,18 @@
                                  <Font size="16.0" />
                               </font></Label>
                            <ComboBox fx:id="cmb_colors" prefWidth="150.0" />
-                           <Button fx:id="btn_save" mnemonicParsing="false" text="Save" />
-                                <Button fx:id="btn_retour" mnemonicParsing="false" text="Back to Menu" />
                         </children>
                         <padding>
                            <Insets left="5.0" right="5.0" />
                         </padding>
                      </VBox>
-                     <VBox alignment="CENTER" prefHeight="101.0" prefWidth="250.0">
+                     <VBox alignment="BOTTOM_RIGHT" layoutX="10.0" layoutY="321.0" prefHeight="208.0" prefWidth="251.0">
                         <children>
-                           <Label fx:id="lbl_generation" contentDisplay="CENTER" text="Generation : 0">
-                              <font>
-                                 <Font size="20.0" />
-                              </font>
-                           </Label>
+                                <Button fx:id="btn_retour" mnemonicParsing="false" text="Back to Menu" />
                         </children>
+                        <VBox.margin>
+                           <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                        </VBox.margin>
                      </VBox>
                   </children>
                   <opaqueInsets>
